--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - run: flutter pub get
 
-      - run: flutter build web --base-href "/cv_corrector-app/" --release
+      - run: flutter build web --base-href "/cv_corrector-app/" --release --dart-define=GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
 
       - uses: actions/upload-pages-artifact@v3
         with:
